--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ nav ul a {
     height: 700px;
     fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
     text-align: center;
+    padding-top: 140px;
 
 
     
